<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/splash_background"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/blur_box"
            android:gravity="center"
            android:alpha="0.9"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/health_logo"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/health_care_n_assistant"
            android:textSize="40sp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:textAlignment="center"
            android:text="@string/your_personal_health_companion_n_stay_on_track_stay_healthy"
            android:textSize="20sp"
            android:textColor="#979191"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/white"
            android:paddingLeft="70dp"
            android:paddingTop="15dp"
            android:paddingRight="70dp"
            android:paddingBottom="15dp"
            android:text="@string/get_started"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textSize="20sp"/>
         </LinearLayout>

    </LinearLayout>

</LinearLayout>