<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:alpha="0.9"
        android:background="@drawable/blur_box">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/health_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:text="Welcome Back"
        android:textColor="#313131"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="Sign in to your HealthCare Assistant account"
        android:textColor="#878787"
        android:textSize="15sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusText"
        android:layout_alignStart="@id/email"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="Email Address"
        android:textColor="#595959"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailText"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:background="@drawable/edit_text_box"
        android:hint="rakib@example.com"
        android:textSize="15sp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignStart="@id/pass"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="Password"
        android:textColor="#595959"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passText"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="enter your password"
        android:textSize="15sp"
        android:background="@drawable/edit_text_box"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_alignEnd="@id/pass"
        android:text="Forgot Password?"
        android:background="@drawable/transparent_button"
        android:textColor="#7E7E7E"
        android:textSize="13sp"
        android:paddingEnd="0dp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Sign In"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#AFAFAF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/or_continue_with"
            android:textColor="#878787"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#AFAFAF" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/linearLayout2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/radius_button"
        android:scaleType="centerInside"
        android:padding="10dp"
        android:contentDescription="@string/sign_in_with_google"
        app:srcCompat="@drawable/google_icon1"/>

    <LinearLayout
        android:id="@+id/alreadyHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#878787"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:paddingStart="0dp"
            android:text="@string/sign_up"
            android:textColor="#626161"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/prog"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/black"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>